k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: geo-notifications
  labels:
    app.kubernetes.io/name: geobrowser-webhook-server
    app.kubernetes.io/part-of: geo
