k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geobrowser-webhook-server
  namespace: geo-notifications
  labels:
    app: geobrowser-webhook-server
spec:
  type: ClusterIP
  selector:
    app: geobrowser-webhook-server
  ports:
    - name: http
      port: 80
      targetPort: http
