k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geobrowser-webhook-server
  namespace: geo-notifications
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - notifications-api.geobrowser.io
      secretName: geobrowser-webhook-server-tls
  rules:
    - host: notifications-api.geobrowser.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: geobrowser-webhook-server
                port:
                  number: 80
